--- a/letsconnect/heroku.yml
+++ b/letsconnect/heroku.yml
@@ -2,4 +2,4 @@ build:
   docker:
     web: Dockerfile
 run:
-  web: gunicorn letsconnect.wsgi:application --error-logfile gunicorn.error.log --access-logfile gunicorn.log --capture-output
+  web: gunicorn letsconnect/letsconnect.wsgi:application --error-logfile gunicorn.error.log --access-logfile gunicorn.log --capture-output
